address latest code review