@@ -112,12 +112,17 @@ public class DrtRequest implements PassengerRequest {
 
 	@Override
 	public List<Id<Person>> getPassengerIds() {
-		return Collections.unmodifiableList(passengerIds);
+		return List.copyOf(passengerIds);
 	}
 
 	@Override
 	public String getMode() {
 		return mode;
+	}
+
+	@Override
+	public int getPartySize() {
+		return passengerIds.size();
 	}
 
 	@Override
